042 ==> 384898 - digiKam issue.
043 ==> 385280 - digikam does not use the native Plasma file dialog under Plasma.
044 ==> 385315 - kipi-plugins not available in digikam and gwenview menu.
045 ==> 385433 - Error file numbering.
046 ==> 385467 - Cannot Add Or Edit Bookmarks / No plugins loaded.
047 ==> 385368 - digiKam causes my machine to blue screen (crash) during installation on Windows 10 while check process in memory.
048 ==> 329391 - digiKam creates 'Document Name' metadata with unreadable characters (encoding problem of accents).
049 ==> 382247 - Showfoto crashed.
050 ==> 385958 - "See more information on the Internet" For Bing Maps Doesn't Work In Windows.
051 ==> 385960 - "See more information on the Internet" For loc.alize.us: No lat/long In URL.
052 ==> 386028 - Database schema link from https://www.digikam.org/documentation/ leads to an useless location.
053 ==> 385592 - digiKam segfaults occasionally, when renaming/moving multiple images [patch].
054 ==> 382312 - digiKam crashes when renaming.
055 ==> 365337 - Install to non-system volume permitted but fails.
056 ==> 385338 - Remember last map view.
057 ==> 386123 - Properties view does not include label properties
058 ==> 371968 - Display of captions in caption editing tab broken unless caption ends in a newline.
059 ==> 386296 - New Persons Tag aren't listed in People tag collection.
060 ==> 312551 - ShowFoto displays camera jpegs with AdobeRGB DCF information with a blue color cast.
061 ==> 375633 - Two buttons in Map tab on the Right Sidebar are not working.
062 ==> 342689 - Map in image/geolocalisation is always at minimum zoom.
063 ==> 365744 - GPS information not found in 4.12, but existing in the JPG files.
064 ==> 386335 - Use a different shortcut for right panel zoom to 100%.
065 ==> 382818 - Rotating a picture ends in crash.
066 ==> 368734 - Moving a hierarchy of tags (a tag with subtags) doesn't work and can lead to losing the complete hierarchy.
067 ==> 